# 25e1-3-eng-ml-kobe-alan-echer

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/base/: catalog.yml  parameters.yml  parameters_PipelineAplicacao.yml  parameters_PreparacaoDados.yml  parameters_Treinamento.yml  parameters_acertos_kobe.yml
data/02_intermediate/: kobe_intermediate_drop_columns.parquet
data/04_feature/: base_test.parquet  base_train.parquet  data_filtered_dev.parquet  data_filtered_prod.parquet
data/04_intermediate/: base_test.parquet  base_train.parquet
data/05_model_input/: base_test.parquet  base_test_dev.parquet  base_test_prod.parquet  base_train.parquet  base_train_dev.parquet  base_train_prod.parquet
data/06_models/: trained_best_model.pickle  trained_lr_model.pickle  trained_model_1.pickle  trained_model_2.pickle
docs/source/: conf.py  index.rst
notebooks/: exploracao.ipynb  model.pkl
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/25e1_3_eng_ml_kobe_alan_echer/: __init__.py  __main__.py  settings.py
src/25e1_3_eng_ml_kobe_alan_echer/pipelines/PipelineAplicacao/: nodes.py  pipeline.py
src/25e1_3_eng_ml_kobe_alan_echer/pipelines/PreparacaoDados/: nodes.py  pipeline.py
streamlit/: main.py
streamlit/pages/: inferencia.py
tests/pipelines/acertos_kobe/: test_pipeline.py
(+5 files in other folders)
